--- a/option.css
+++ b/option.css
@@ -4,9 +4,10 @@
     }
 
     #option button {
-        font-size: 20px;
-        width: 100px;
-        height: 50px;
+        text-align: center;
+        font-size: 10px;
+        width: 50px;
+        height: 30px;
         padding: 5px 10px;
     }
 }
